fixed table-layout with word-wrap: break-word, updated sandbox

--- a/src/components/table/table.scss
+++ b/src/components/table/table.scss
@@ -1,6 +1,9 @@
 @import 'commons';
 
 .m-table {
+    table-layout: fixed;
+    width: 100%;
+
     thead {
         text-align: left;
 
@@ -31,6 +34,7 @@
     td {
         padding: $m-spacing;
         box-sizing: content-box;
+        word-wrap: break-word;
     }
 
     &__loading td {
